--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "server": "nodemon index",
-    "client": "npm start --prefix ../client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+   "dev": "nodemon run dev",
+   "strat": "node index"
   },
   "author": "",
   "license": "ISC",
