changed the scripts

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-   "dev": "nodemon run dev",
-   "strat": "node index"
-  },
+  "dev": "nodemon index.js",
+  "start": "node index.js"
+},
+
   "author": "",
   "license": "ISC",
   "description": "",
